--- a/src/welcome.css
+++ b/src/welcome.css
@@ -38,10 +38,11 @@ html, body {
   width: 50%;
   height: 100%;
   background: #EB5617;
-  /* Subtle diagonal */
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
+  /* Very light diagonal */
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 95% 100%);
   z-index: 11;
 }
+
 
 /* 4. Logo */
 .welcome-logo {
