--- a/src/welcome.css
+++ b/src/welcome.css
@@ -38,11 +38,10 @@ html, body {
   width: 50%;
   height: 100%;
   background: #EB5617;
-  /* Very light diagonal */
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 95% 100%);
+  /* Subtle diagonal */
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 5% 100%);
   z-index: 11;
 }
-
 
 /* 4. Logo */
 .welcome-logo {
