--- a/src/welcome.css
+++ b/src/welcome.css
@@ -56,21 +56,20 @@ html, body {
   background-position: center;
   z-index: 5;
 }
-
 /* 5. Background watermark image (faded) */
 .welcome-bg-image {
   position: absolute;
   width: 496.49px;
   height: 437.58px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-image: url('../assets/image19.png');
+  left: calc(50% - 248.245px); /* Centered horizontally */
+  top: calc(50% - 218.79px);   /* Centered vertically */
   background-size: cover;
   background-repeat: no-repeat;
-  opacity: 0.1;
-  z-index: 1;
+  opacity: 0.5;
+  z-index: 2; /* Lower than container, higher than background */
+  pointer-events: none; /* Avoid interference */
 }
+
 
 /* 6. Main Content Box */
 .welcome-container {
