--- a/src/welcome.css
+++ b/src/welcome.css
@@ -24,33 +24,31 @@ html, body {
   position: absolute;
   width: 1440px;
   height: 31.44px;
-  top: 0;
   left: 0;
+  top: 0;
   z-index: 10;
-  transform: rotateY(180deg); /* matches Figma's matrix(-1, 0, 0, 1, 0, 0) */
+  overflow: hidden;
 }
 
+/* Blue full-width base */
 .header-bar::before {
   content: '';
   position: absolute;
-  width: 720px;
-  height: 31.44px;
-  right: 720px;
-  top: 0;
+  width: 100%;
+  height: 100%;
   background: #1B577E;
-  z-index: 11;
 }
 
+/* Orange overlay with diagonal slash */
 .header-bar::after {
   content: '';
   position: absolute;
-  width: 744.67px;
-  height: 31.44px;
-  left: 695.33px;
+  width: 750px;
+  height: 100%;
+  right: 0;
   top: 0;
   background: #EB5617;
-  clip-path: polygon(0 0, 100% 0, 95% 100%, 0 100%);
-  z-index: 12;
+  clip-path: polygon(30% 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 
